Bug 1289934 - Simplify ScopedICUObject to store deleter function as a template parameter, not as a runtime variable.  r=sfink

--HG--
extra : rebase_source : b76a1cc4403b9953e0c17f3db05f5e1a1fec25cf